# brazilian_tax_revenue_by_state

./: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
kaggle_dataset/: dataset-metadata.json
src/: constants.py  data_contract.py  extract.py  transform.py
